--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <a href="tos.html">Terms of Service</a>
             <a href="privacy.html">Privacy Policy</a>
             <a href="support.html">Support</a>
+            <a href="index.html">Home</a>
+
         </nav>
     </header>
 
