--- a/faq.html
+++ b/faq.html
@@ -40,6 +40,7 @@
             <a href="faq.html">FAQ</a>
             <a href="tos.html">Terms of Service</a>
             <a href="privacy.html">Privacy Policy</a>
+            <a href="support.html">Support</a>
         </nav>
     </header>
 
