--- a/tos.html
+++ b/tos.html
@@ -30,9 +30,10 @@
         <img src="assets/logo.png" alt="Ludus Logo">
         <nav>
             <a href="index.html">Home</a>
-            <a href="tos.html">Terms of Service</a>
+            <a href="tos.html">ToS</a>
             <a href="privacy.html">Privacy Policy</a>
             <a href="support.html">Support</a>
+            <a href="faq.html">FAQ</a>
         </nav>
     </header>
 
